--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Seb Méndez (guirdo.xyz)",
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^2.0.2-alpha.2",
     "@11ty/eleventy-plugin-webc": "^0.11.1",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
