--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.2-alpha.2",
     "@11ty/eleventy-plugin-webc": "^0.11.1",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "fast-glob": "^3.2.12",
