--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cssnano": "^6.0.1",
     "fast-glob": "^3.2.12",
     "html-minifier-terser": "^7.2.0",
+    "moment": "^2.29.4",
     "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
     "postcss-import-ext-glob": "^2.1.1"
